turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:12: error: ';' expected but ')' found.
	if (rule)(j)(I)(MVT_SUIVANT)==8) {
                                       ^